/*
 * $Id: ChangeLog,v 1.6097 2008/05/14 14:06:57 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2008-05-19 11:06 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
  * makefile.bc
    + Readded support for LFLAGS EnvVar
  * source/compiler/harbour.c
    ! Fixed typo which caused GPF trap when using -w3
    
2008-05-14 21:05 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
  * contrib/hbzlib/zipplatform.cpp
  * contrib/hbzlib/zipfile.cpp
    ! left-over warning fixes under GCC 4.3

2008-05-14 20:20 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
  * makefile.gc
    + compiler flag -fno-strict-aliasing to fix compiling
      when a pointer is passed-by-reference

  * makefile.bc
    + /C flag to ARFLAGS (don't ignore symbol case)

  * source/common/hbstr.c
  * contrib/libnf/getenvrn.c
  * contrib/hbzlib/zip.c
  * contrib/hbzlib/zipnew.cpp
  * contrib/hbzlib/zipfile.cpp
  * contrib/hbzlib/zipstorage.cpp
  * contrib/wvtgui/wvtcore.c
  * contrib/what32/source/_winsock.c
    ! fixed warnings under GCC 4.3

  * source/vm/hvm.c
    ! casting on initialization of hb_vm_BreakBlock (NULL->0)

  * source/compiler/hbusage.c
    ! do not harcode HB_VER_CVSID, use function instead

2008-05-14 11:45 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
  * hbzlib\zip.c
    ! Fixed some memory leaks.
    % optimized array create expresions.
    reported by Juan Galvez

2008-05-14 10:40 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/vm/thread.c
    ! Fixed segfault on thread creation after changes to struct hb_struSymbol.
  * utils/hbrun/Makefile
    ! Fixed hbrun compilation via GNU Makefiles (added zlib).

2008-05-14 00:03 UTC+0100 Ath <Ath1 at sourceforge.net>
  * compile.mak
    * finetune compilation of menuto.prg from contrib/libnf

2008-05-09 13:50 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
  * source/vm/errorapi.c