@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.6097 2008/05/14 14:06:57 andijahja Exp $
+ * $Id: ChangeLog,v 1.6098 2008/05/19 15:42:56 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -8,12 +8,21 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2008-05-19 18:43 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
+  * include/hbvmpub.h
+    * Changed member uiDestroyed to uiFlags in struct HB_BASERRY
+  * source/vm/arrays.c
+    ! Clipper compatability and GPF trap in aEval() - Clipper defers all aSize() shrinking operations when in aEval()
+
+  * source/rtl/win32ole.prg
+    * Corrected typo in support for VTWrpper() for VT_ERROR
+
 2008-05-19 11:06 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
   * makefile.bc
     + Readded support for LFLAGS EnvVar
   * source/compiler/harbour.c
     ! Fixed typo which caused GPF trap when using -w3
-    
+
 2008-05-14 21:05 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
   * contrib/hbzlib/zipplatform.cpp
   * contrib/hbzlib/zipfile.cpp
